--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "arreplegats",
+  "name": "web-arreplegats",
   "version": "0.1.0",
+  "homepage": "https://uriiisegura.github.io/web-arreplegats/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
