--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "resum-historic",
+  "name": "arreplegats-resum-historic",
   "version": "0.1.0",
-  "homepage": "https://uriiisegura.github.io/resum-historic/",
+  "homepage": "https://uriiisegura.github.io/arreplegats-resum-historic/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
